--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="#harga">Harga paket tour Dieng</a></li>
         <li><a href="#penutup">Penutup</a></li>
         <li><a href="#faq">FAQ – Pertanyaan Umum</a></li>
+        <li><a href="#referensi">Referensi</a></li>
       </ul>
     </nav>
 
@@ -132,6 +133,23 @@ tiket masuk destinasi wisata</a>, <a href="/penginapan-dieng">penginapan</a> (un
       <h3>Apakah sudah termasuk asuransi perjalanan?</h3>
       <p>Asuransi perjalanan biasanya bersifat opsional, tergantung paket dan kebijakan penyedia jasa. Pastikan bertanya atau meminta info detail sebelum berangkat.</p>
     </div>
+
+
+    <section class="mw-referensi" style="margin-top:2.5rem; padding:1.3rem 1rem 1.5rem 1.2rem; background:#f7faff; border-radius:10px;">
+  <h2 id="referensi" style="font-size:1.13rem; margin:0 0 .9rem 0;">Referensi</h2>
+  <ol style="margin:0 0 0 1.25rem; padding:0; font-size:1.03rem; line-height:1.8;">
+    <li>
+      <a href="https://www.putratourdieng.com/">Putra Tour Dieng</a>. Informasi layanan dan itinerary perjalanan wisata ke kawasan Dieng. Diakses 18 Juli 2025.
+    </li>
+    <li>
+      <a href="https://www.paketwisatadiengwonosobo.com/">Paket wisata Dieng dari Jakarta</a>. Rekomendasi paket wisata ke Dieng dengan pilihan meeting point. Diakses 18 Juli 2025.
+    </li>
+    <li>
+      <a href="https://www.putratour.id/">Harga paket wisata Dieng</a>. Daftar harga dan rincian fasilitas paket wisata Dieng berbagai pilihan durasi. Diakses 18 Juli 2025.
+    </li>
+  </ol>
+</section>
+
   </article>
 
   <div id="mw-footer"></div>
